fix(Front): small fixes on mobile display

--- a/apps/documentation/src/components/landingPage/title/title.module.css
+++ b/apps/documentation/src/components/landingPage/title/title.module.css
@@ -1,8 +1,15 @@
 .title-container {
   display: flex;
-  gap: 0.3em;
-  font-size: 1.5rem;
-  font-family: 'InterBold';
+  gap: 2em;
+}
+
+@media (max-width: 700px) {
+  .title-container {
+    flex-direction: column;
+    gap: 3em;
+    align-items: center;
+    margin-top: 2em;
+  }
 }
 
 .letter {
@@ -18,6 +25,13 @@
   transform: translateY(0.25em);
   text-align: center;
   transition: transform 1000ms;
+}
+
+.paragraph {
+  display: flex;
+  gap: 0.3em;
+  font-size: 1.5rem;
+  font-family: 'InterBold';
 }
 
 .red {
